[package]
name = "pallet-ocw"
version = "2.0.0"
authors = ["JesseAbram <jesseabramowitz@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# external dependencies
parking_lot = "0.10.0"
alt_serde = { version = "1", default-features = false, features = ["derive"] }
# updated to `alt_serde_json` when latest version supporting feature `alloc` is released
serde_json = { version = "1", default-features = false, git = "https://github.com/Xanewok/json", branch = "no-std", features = ["alloc"] }
hex-literal = "0.3.1"

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

# Substrate dependencies
[dependencies.frame-support]
default-features = false
version = '2.0.0'

[dependencies.frame-system]
default-features = false
package = 'frame-system'
version = '2.0.0'

[dependencies.sp-runtime]
default-features = false
version = '2.0.0'

[dependencies.sp-core]
default-features = false
version = '2.0.0'

[dependencies.sp-io]
default-features = false
version = '2.0.0'

[dependencies.sp-std]
default-features = false
version = '2.0.0'

[dependencies.pooler]
default-features = false
package = 'pallet-pooler'
path = '../pooler'
version = '2.0.0'

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
	'pooler/std',
]